--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "vite-backend-integration",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev:server": "ts-node-dev ./server/index.ts",
+    "dev:client": "cd client && vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -22,7 +23,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "typescript": "^5.5.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.2",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
