--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "dev:server": "ts-node-dev ./server/index.ts",
     "dev:client": "cd client && vite",
-    "build": "tsc -b && vite build",
+    "build:client": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "express": "^4.20.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-express": "^0.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
