--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "vite-express": "^0.19.0"
   },
   "devDependencies": {
