dynamic import handler

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev:server": "ts-node-dev ./server/index.ts",
     "dev:client": "cd client && vite",
-    "build:client": "tsc -b && vite build",
+    "build:server": "tsc server/index.ts --outDir dist/server",
+    "build:client": "tsc -b && vite build --config client/vite.config.ts",
+    "build": "npm run build:client && npm run build:server",
+    "start": "NODE_ENV=production node dist/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
