--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "dev:server": "ts-node-dev ./server/index.ts",
     "dev:client": "cd client && vite",
-    "build": "tsc -b && vite build",
+    "build:server": "tsc server/index.ts --outDir dist/server",
+    "build:client": "tsc -b && vite build --config client/vite.config.ts",
+    "build": "npm run build:client && npm run build:server",
+    "start": "NODE_ENV=production node dist/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "express": "^4.20.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
